apps/nginx/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
