apps/nginx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginxdpm
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers: 
      - image: quay.io/thien2207/nginxsimple:91969e85fb2d8e0c3d1da7cd9ddecf8cfd1019cc	
        name: nginx
