apps/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginxsvc
  namespace: nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
---
