apps/nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginxr
  namespace: nginx
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginxsvc
    weight: 100
